<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#54aa5c"
    tools:context="com.example.desmatapp.GameActivity" >

    <!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.
    -->

    <!--
         This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows.
    -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_tempo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="1:00"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFF33" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_pts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginEnd="15dp"
                android:text="0"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#f3f3f3" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:text="@string/Pontos"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#f3f3f3" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        	android:orientation="horizontal" >
            
	        <ImageView
	            android:id="@+id/imageView1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/empty" />
		        
	        <ImageView
	            android:id="@+id/imageView2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/empty" />
	        
	        <ImageView
	            android:id="@+id/imageView3"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/empty" />
	        
	        <ImageView
	            android:id="@+id/imageView4"
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:src="@drawable/empty" />
            
	        <ImageView
	            android:id="@+id/imageView5"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/empty" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        	android:orientation="horizontal" >
            
	        <ImageView
	            android:id="@+id/imageView6"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/empty" />
		        
	        <ImageView
	            android:id="@+id/imageView7"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/empty" />
	        
	        <ImageView
	            android:id="@+id/imageView8"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/empty" />
	        
	        <ImageView
	            android:id="@+id/imageView9"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/empty" />
            
	        <ImageView
	            android:id="@+id/imageView10"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/empty" />
        </LinearLayout>

       <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        	android:orientation="horizontal" >
            
	        <ImageView
	            android:id="@+id/imageView11"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/empty" />
		        
	        <ImageView
	            android:id="@+id/imageView12"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/empty" />
	        
	        <ImageView
	            android:id="@+id/imageView13"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/empty" />
	        
	        <ImageView
	            android:id="@+id/imageView14"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/empty" />
            
	        <ImageView
	            android:id="@+id/imageView15"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/empty" />
        </LinearLayout>

       <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        	android:orientation="horizontal" >
            
	        <ImageView
	            android:id="@+id/imageView16"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/empty" />
		        
	        <ImageView
	            android:id="@+id/imageView17"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/empty" />
	        
	        <ImageView
	            android:id="@+id/imageView18"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/empty" />
	        
	        <ImageView
	            android:id="@+id/imageView19"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/empty" />
            
	        <ImageView
	            android:id="@+id/imageView20"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/empty" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        	android:orientation="horizontal" >
            
	        <ImageView
	            android:id="@+id/imageView21"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/empty" />
		        
	        <ImageView
	            android:id="@+id/imageView22"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/empty" />
	        
	        <ImageView
	            android:id="@+id/imageView23"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/empty" />
	        
	        <ImageView
	            android:id="@+id/imageView24"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/empty" />
            
	        <ImageView
	            android:id="@+id/imageView25"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/empty" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fullscreen_content_controls"
        style="?metaButtonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/black_overlay"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:ignore="UselessParent" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="14dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/bt_act1"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reg" />

            <Button
                android:id="@+id/bt_act2"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cerc" />

            <ImageButton
                android:id="@+id/ib_up"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/up"
                android:src="@drawable/up" />

            <Button
                android:id="@+id/bt_act3"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arv" />

            <ProgressBar
                android:id="@+id/pb_action"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/bt_sair"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sair" />

            <ImageButton
                android:id="@+id/ib_left"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/left"
                android:src="@drawable/left" />

            <ImageButton
                android:id="@+id/ib_down"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/down"
                android:src="@drawable/down" />

            <ImageButton
                android:id="@+id/ib_right"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/right"
                android:src="@drawable/right" />
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_overlay" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical" >

            <ProgressBar
                android:id="@+id/progressBar1"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/tv_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Aguar_Jog"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

    </RelativeLayout>

</FrameLayout>
